feat:启动页 test:新闻列表，优化模拟登录逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,7 @@
         android:theme="@style/Theme.AndroidMVVMTest"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.PictureViewActivity"
-            android:exported="false"
-            android:theme="@style/ImgTheme"/>
-        <activity
-            android:name=".ui.activity.BingPicActivity"
-            android:exported="false"
-            android:theme="@style/ImgTheme"/>
-        <activity
-            android:name=".ui.activity.MainActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".ui.activity.LoginActivity"
+            android:name=".ui.activity.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,6 +25,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.activity.PictureViewActivity"
+            android:exported="false"
+            android:theme="@style/ImgTheme" />
+        <activity
+            android:name=".ui.activity.BingPicActivity"
+            android:exported="false"
+            android:theme="@style/ImgTheme" />
+        <activity
+            android:name=".ui.activity.MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.activity.LoginActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
