--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.activity.SplashActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,17 +29,21 @@
         <activity
             android:name=".ui.activity.PictureViewActivity"
             android:exported="false"
-            android:theme="@style/ImgTheme" />
+            android:theme="@style/ImageTheme"/>
         <activity
             android:name=".ui.activity.BingPicActivity"
             android:exported="false"
-            android:theme="@style/ImgTheme" />
+            android:theme="@style/ImgTheme"/>
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true" />
         <activity
             android:name=".ui.activity.LoginActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/SplashTheme"/>
+        <activity android:name=".ui.activity.HomeActivity"
+            android:enabled="true"
+            android:theme="@style/ImgTheme"/>
     </application>
 
 </manifest>
