feat:完成启动页；图片、新闻、视频展示页的黑夜白天模式适配

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,8 +32,7 @@
             android:theme="@style/ImageTheme"/>
         <activity
             android:name=".ui.activity.BingPicActivity"
-            android:exported="false"
-            android:theme="@style/ImgTheme"/>
+            android:exported="false" />
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true" />
