--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     //hilt
-//    id 'com.google.dagger.hilt.android'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -85,8 +85,13 @@ dependencies {
     //腾讯X5内核WebView
     implementation 'com.tencent.tbs:tbssdk:44085'
 
-//    //hilt和hilt注解解释器
-//    implementation "com.google.dagger:hilt-android:2.44"
-//    annotationProcessor "com.google.dagger:hilt-compiler:2.44"
+    //hilt和hilt注解解释器
+    implementation "com.google.dagger:hilt-android:2.44"
+    annotationProcessor "com.google.dagger:hilt-compiler:2.44"
+    // Hilt 对于ViewModel的支持
+//    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
+//    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
+
+
 
 }
