--- a/build.gradle
+++ b/build.gradle
@@ -3,5 +3,5 @@ plugins {
     id 'com.android.application' version '8.1.2' apply false
     id 'com.android.library' version '8.1.2' apply false
     //hilt
-//    id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
