feat:新加注册页 fix:登录注册等待toast体验

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
             android:name=".ui.activity.LoginActivity"
             android:exported="false"
             android:theme="@style/LoginTheme" />
+        <activity
+            android:name=".ui.activity.RegisterActivity"
+            android:exported="false"
+            android:theme="@style/LoginTheme" />
         <activity android:name=".ui.activity.HomeActivity"
             android:exported="false"
             android:theme="@style/ImgTheme"/>
